WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49121
Input element with inner spin button set to display:none causes crash
https://bugs.webkit.org/show_bug.cgi?id=49121
Summary
Input element with inner spin button set to display:none causes crash
James Robinson
Reported
2010-11-05 18:59:51 PDT
Input element with inner spin button set to display:none causes crash
Attachments
Patch
(3.76 KB, patch)
2010-11-05 19:01 PDT
,
James Robinson
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2010-11-05 19:01:18 PDT
Created
attachment 73157
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-11-05 19:48:03 PDT
Comment on
attachment 73157
[details]
Patch ok.
Kent Tamura
Comment 3
2010-11-05 19:59:50 PDT
Thank you for fixing it!
James Robinson
Comment 4
2010-11-08 13:52:55 PST
Committed
r71568
: <
http://trac.webkit.org/changeset/71568
>
WebKit Review Bot
Comment 5
2010-11-08 16:28:10 PST
http://trac.webkit.org/changeset/71568
might have broken GTK Linux 64-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug