2010-11-08  James Robinson  <jamesr@chromium.org>

Reviewed by Dimitri Glazkov.

        Input element with inner spin button set to display:none causes crash
        https://bugs.webkit.org/show_bug.cgi?id=49121

        Adds a test for dispatching mouse events at an <input type="number"> with
        the inner spin button set to display:none does not crash.

        * fast/forms/input-number-spinbutton-crash-expected.txt: Added.
        * fast/forms/input-number-spinbutton-crash.html: Added.
2010-11-08  James Robinson  <jamesr@chromium.org>

        Reviewed by Dimitri Glazkov.

        Input element with inner spin button set to display:none causes crash
        https://bugs.webkit.org/show_bug.cgi?id=49121

        Null check the inner spin button's renderer before dereferencing it.

        Test: fast/forms/input-number-spinbutton-crash.html

        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::forwardEvent):

Canonical link: https://commits.webkit.org/62055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71568 268f45cc-cd09-0410-ab3c-d52691b4dbfc